...

    <!-- Auth -->
    <string name="email_hint_text">Email</string>
    <string name="name_hint_text">Full name</string>
    <string name="password_hint_text">Password</string>
    <string name="confirm_password_hint_text">Confirm Password</string>
    <string name="login_button_text">Log In</string>
    <string name="register_button_text">Sign Up</string>
    <string name="to_register_button_text">No account? <u>Sign up</u></string>
    <string name="back_to_login_text">Already have an account? <u>Log in</u></string>


    <!-- Profile -->
    <string name="profile_menu_action_title">Profile</string>
    <string name="profile_log_out_button_text">Log out</string>
...
